--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -3,10 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Üye Ol</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  {% extends "_nav.html" %} 
-  
+  {% include "partials/_nav.html" %}
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header">Üye Ol</div>
+          <div class="card-body">
+            <form>
+              <div class="form-group">
+                <label for="name">Adınız:</label>
+                <input type="text" class="form-control" id="name" placeholder="Adınızı girin">
+              </div>
+              <div class="form-group">
+                <label for="email">E-posta Adresiniz:</label>
+                <input type="email" class="form-control" id="email" placeholder="E-posta adresinizi girin">
+              </div>
+              <div class="form-group">
+                <label for="password">Şifre:</label>
+                <input type="password" class="form-control" id="password" placeholder="Şifrenizi girin">
+              </div>
+              <button type="submit" class="btn btn-primary">Üye Ol</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
+
