--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -1,68 +1,27 @@
-<nav
-      class="navbar navbar-expand-lg navbar-dark"
-      style="background-color: #50a85e"
-    >
-      <div class="container">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">
+    <a class="navbar-brand mr-auto" href="#">Logo</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Anasayfa</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Hakkımızda</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Hizmetlerimiz</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">İletişim</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 
-        {% if user.is_authenticated and user.is_user%}
-          <a href="/users/home" class="navbar-brand"
-          ><i class="fa-solid fa-dumbbell"></i> FitLife</a>
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a href="/trainers" class="nav-link">Trainers</a>
-            </li>
-            <li class="nav-item">
-            <li class="nav-item">
-              <a href="{% url "message_view_student" %}" class="nav-link">Messages</a>
-            </li>
-            <li class="nav-item">
-              <a href="{% url "user_diet" %}" class="nav-link">My Diet</a>
-            </li>
-            <li class="nav-item">
-              <a href="{% url "user_profile" %}" class="nav-link">Profile</a>
-            </li>
-            <li class="nav-item">
-              <a href="{% url "user_logout" %}" class="nav-link">Logout</a>
-            </li>
-          </ul>
-        {% elif user.is_authenticated and not user.is_user %}
-          <a href="/users/teacher/home" class="navbar-brand"
-          ><i class="fa-solid fa-dumbbell"></i> FitLife</a>
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a href="{% url "teachers_students" %}" class="nav-link">My Students</a>
-            </li>
-            <li class="nav-item">
-              <a href="{% url "message_view_teacher" %}" class="nav-link">Messages</a>
-            </li>
-            <li class="nav-item">
-              <a href="{% url "teacher_profile" %}" class="nav-link">Profile</a>
-            </li>
-            <li class="nav-item">
-              <a href="{% url "user_logout" %}" class="nav-link">Logout</a>
-            </li>
-          </ul>
-        {% else %}
-          <a href="/" class="navbar-brand"
-          ><i class="fa-solid fa-dumbbell"></i> FitLife</a>
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a href="/trainers" class="nav-link">Trainers</a>
-            </li>
-            <li class="nav-item">
-              <a href="{% url "user_register" %}" class="nav-link">Sign Up</a>
-            </li>
-            <li class="nav-item">
-              <a href="{% url "user_login" %}" class="nav-link">Sign In</a>
-            </li>
-            <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
-            <li class="nav-item">
-              <a href="/contact" class="nav-link">Contact</a>
-            </li>
-          </ul>
-        {% endif %}
 
-
-      </div>
-    </nav>
