--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand mr-auto" href="#">Logo</a>
+    <!-- Kitap ikonunu ekleyin -->
+    <a class="navbar-brand mr-auto" href="#"><i class="fa-solid fa-book-open-reader"></i> Logo</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,7 +11,7 @@
           <a class="nav-link active" aria-current="page" href="#">Anasayfa</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Hakkımızda</a>
+          <a class="nav-link" href="#">Giriş</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Hizmetlerimiz</a>
@@ -22,6 +23,3 @@
     </div>
   </div>
 </nav>
-
-
-
