--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -36,6 +36,19 @@
               <label for="confirm_password">Şifreyi Tekrar Girin:</label>
               <input type="password" class="form-control" id="confirm_password" placeholder="Şifreyi tekrar girin">
             </div>
+            <div class="form-group">
+              <label>İlgi Alanları:</label>
+              <div class="checkbox-list">
+                {% for interest in interest_areas %}
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="{{ interest }}" id="interest_{{ forloop.counter }}">
+                    <label class="form-check-label" for="interest_{{ forloop.counter }}">
+                      {{ interest }}
+                    </label>
+                  </div>
+                {% endfor %}
+              </div>
+            </div>
             <button type="submit" class="btn btn-primary">Üye Ol</button>
           </form>
         </div>
