Login screen is done on Front-End

--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -53,7 +53,7 @@
           </form>
         </div>
         <div class="card-footer">
-          <p class="mb-0">Zaten üye misiniz? <a href="#">Giriş yapın</a></p>
+          <p class="mb-0">Zaten üye misiniz? <a href="{% url 'show_login' %}">Giriş yapın</a></p>
         </div>
       </div>
     </div>
