--- a/index/templates/index/signin.html
+++ b/index/templates/index/signin.html
@@ -1,1 +1,29 @@
 {% extends "layout.html" %} 
+
+{% block content %}
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-header">Giriş Yap</div>
+        <div class="card-body">
+          <form>
+            <div class="form-group">
+              <label for="email">E-posta Adresiniz:</label>
+              <input type="email" class="form-control" id="email" placeholder="E-posta adresinizi girin">
+            </div>
+            <div class="form-group">
+              <label for="password">Şifre:</label>
+              <input type="password" class="form-control" id="password" placeholder="Şifrenizi girin">
+            </div>
+            <button type="submit" class="btn btn-primary">Giriş Yap</button>
+          </form>
+        </div>
+        <div class="card-footer">
+          <p class="mb-0">Henüz üye değil misiniz? <a href="{% url 'show_signup' %}">Üye olun</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
