--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} 
+{% extends "layout.html" %}
 
 {% block content %}
 <div class="container mt-5">
@@ -7,22 +7,23 @@
       <div class="card">
         <div class="card-header">Üye Ol</div>
         <div class="card-body">
-          <form>
+          <form method="POST">
+            {% csrf_token %}
             <div class="form-group">
               <label for="name">Adınız:</label>
-              <input type="text" class="form-control" id="name" placeholder="Adınızı girin">
+              <input type="text" class="form-control" id="name" name="name" placeholder="Adınızı girin">
             </div>
             <div class="form-group">
               <label for="surname">Soyadınız:</label>
-              <input type="text" class="form-control" id="surname" placeholder="Soyadınızı girin">
+              <input type="text" class="form-control" id="surname" name="surname" placeholder="Soyadınızı girin">
             </div>
             <div class="form-group">
               <label for="email">E-posta Adresiniz:</label>
-              <input type="email" class="form-control" id="email" placeholder="E-posta adresinizi girin">
+              <input type="email" class="form-control" id="email" name="email" placeholder="E-posta adresinizi girin">
             </div>
             <div class="form-group">
               <label for="gender">Cinsiyet:</label>
-              <select class="form-control" id="gender">
+              <select class="form-control" id="gender" name="gender">
                 <option>Erkek</option>
                 <option>Kadın</option>
                 <option>Diğer</option>
@@ -30,18 +31,18 @@
             </div>
             <div class="form-group">
               <label for="password">Şifre:</label>
-              <input type="password" class="form-control" id="password" placeholder="Şifrenizi girin">
+              <input type="password" class="form-control" id="password" name="password" placeholder="Şifrenizi girin">
             </div>
             <div class="form-group">
               <label for="confirm_password">Şifreyi Tekrar Girin:</label>
-              <input type="password" class="form-control" id="confirm_password" placeholder="Şifreyi tekrar girin">
+              <input type="password" class="form-control" id="confirm_password" name="confirm_password" placeholder="Şifreyi tekrar girin">
             </div>
             <div class="form-group">
               <label>İlgi Alanları:</label>
               <div class="checkbox-list">
                 {% for interest in interest_areas %}
                   <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="{{ interest }}" id="interest_{{ forloop.counter }}">
+                    <input class="form-check-input" type="checkbox" value="{{ interest }}" id="interest_{{ forloop.counter }}" name="interests">
                     <label class="form-check-label" for="interest_{{ forloop.counter }}">
                       {{ interest }}
                     </label>
