--- a/index/templates/index/signin.html
+++ b/index/templates/index/signin.html
@@ -7,14 +7,20 @@
       <div class="card">
         <div class="card-header">Giriş Yap</div>
         <div class="card-body">
-          <form>
+          <form method="POST">
+            {% csrf_token %}
+            {% if error %}
+            <div class="alert alert-danger">
+              {{error}}
+            </div>
+            {% endif %}
             <div class="form-group">
               <label for="email">E-posta Adresiniz:</label>
-              <input type="email" class="form-control" id="email" placeholder="E-posta adresinizi girin">
+              <input type="email" class="form-control" id="email" name="email" placeholder="E-posta adresinizi girin">
             </div>
             <div class="form-group">
               <label for="password">Şifre:</label>
-              <input type="password" class="form-control" id="password" placeholder="Şifrenizi girin">
+              <input type="password" class="form-control" id="password" name="password" placeholder="Şifrenizi girin">
             </div>
             <button type="submit" class="btn btn-primary">Giriş Yap</button>
           </form>
