--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -1,39 +1,34 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <!-- Kitap ikonunu ekleyin -->
-    {% if user.is_authenticated%}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
-        <!-- Kitap ikonunu ekleyin -->
-        <a class="navbar-brand mr-auto" href="#"><i class="fa-solid fa-book-open-reader"></i> Logo</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'show_main' %}">Anasayfa</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'show_login' %}">Profilim</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'show_logout' %}">Çıkış</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">İletişim</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    {% if user.is_authenticated %}
+    <a class="navbar-brand mr-auto" href="#"><i class="fa-solid fa-book-open-reader"></i> Logo</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'show_main' %}">Anasayfa</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'show_login' %}">Profilim</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'show_logout' %}">Çıkış</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">İletişim</a>
+        </li>
+      </ul>
+    </div>
     {% else %}
     <a class="navbar-brand mr-auto" href="#"><i class="fa-solid fa-book-open-reader"></i> Logo</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'show_main' %}">Anasayfa</a>
         </li>
