--- a/user/templates/user/main.html
+++ b/user/templates/user/main.html
@@ -1,5 +1,16 @@
-{% extends "layout.html" %} 
+{% extends "layout.html" %}
 
 {% block content %}
-
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <form action="#" method="GET" class="input-group">
+        <input type="text" class="form-control mr-2" name="search" placeholder="Ara...">
+        <div class="input-group-append">
+          <button type="submit" class="btn btn-primary btn-block">Ara</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
