The user can update their information from the profile page.

--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -12,7 +12,7 @@
           <a class="nav-link active" aria-current="page" href="{% url 'show_main' %}">Anasayfa</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'show_login' %}">Profilim</a>
+          <a class="nav-link" href="{% url 'show_profile' %}">Profilim</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'show_logout' %}">Çıkış</a>
