--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -16,15 +16,15 @@
             {% endif %}
             <div class="form-group">
               <label for="name">Adınız:</label>
-              <input type="text" class="form-control" id="name" name="name" placeholder="Adınızı girin">
+              <input type="text" class="form-control" id="name" name="name" placeholder="Adınızı girin" value="{{ user.first_name }}">
             </div>
             <div class="form-group">
               <label for="surname">Soyadınız:</label>
-              <input type="text" class="form-control" id="surname" name="surname" placeholder="Soyadınızı girin">
+              <input type="text" class="form-control" id="surname" name="surname" placeholder="Soyadınızı girin" value="{{ user.last_name }}">
             </div>
             <div class="form-group">
               <label for="email">E-posta Adresiniz:</label>
-              <input type="email" class="form-control" id="email" name="email" placeholder="E-posta adresinizi girin">
+              <input type="email" class="form-control" id="email" name="email" placeholder="E-posta adresinizi girin" value="{{ user.email }}">
             </div>
             <div class="form-group">
               <label for="password">Şifre:</label>
@@ -33,14 +33,14 @@
             <div class="form-group">
               <div class="form-group">
                 <label for="password">Yeniden Şifre:</label>
-                <input type="password" class="form-control" id="repassword" name="repassword" placeholder="Şifrenizi tekrargirin">
+                <input type="password" class="form-control" id="repassword" name="repassword" placeholder="Şifrenizi tekrar girin">
               </div>
               <div class="form-group">
               <label>İlgi Alanları:</label>
               <div class="checkbox-list">
                 {% for interest in interest_areas %}
                   <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="{{ interest }}" id="interest_{{ forloop.counter }}" name="interests">
+                    <input class="form-check-input" type="checkbox" value="{{ interest }}" id="interest_{{ forloop.counter }}" name="interests" {% if interest in current_interests %} checked {% endif %}>
                     <label class="form-check-label" for="interest_{{ forloop.counter }}">
                       {{ interest }}
                     </label>
