--- a/user/templates/user/article.html
+++ b/user/templates/user/article.html
@@ -9,6 +9,22 @@
                     <h5 class="card-title">{{ article_name }}</h5>
                     <p class="card-text">{{ article_text }}</p>
                 </div>
+                <div class="card-footer">
+                    <form id="like-form" class="float-left" method="POST" action="{% url 'like_article' %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="article_like" value="like">
+                        <input type="hidden" name="article_name" value="{{ article_name }}">
+                        <input type="hidden" name="article_text" value="{{ article_text }}">
+                        <button type="submit" class="btn btn-success">Like</button>
+                    </form>
+                    <form id="dislike-form" class="float-right" method="POST" action="{% url 'dislike_article' %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="article_like" value="dislike">
+                        <input type="hidden" name="article_name" value="{{ article_name }}">
+                        <input type="hidden" name="article_text" value="{{ article_text }}">
+                        <button type="submit" class="btn btn-danger">Dislike</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
