--- a/user/templates/user/main.html
+++ b/user/templates/user/main.html
@@ -4,7 +4,8 @@
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <form action="#" method="GET" class="input-group">
+      <form action="{% url 'user_search' %}" method="POST" class="input-group">
+        {% csrf_token %}
         <input type="text" class="form-control mr-2" name="search" placeholder="Ara...">
         <div class="input-group-append">
           <button type="submit" class="btn btn-primary btn-block">Ara</button>
